# agent-042

./: .gitignore  .pre-commit-config.yaml  MLOps_task2_short.md  README.md  Timeschedule.md  Timeschedule_long.md  pyproject.toml
.dvc/: config
assets/datasets/: .gitignore  arxiv-summarization-01.dvc
docker/mlflow/: Dockerfile
experiments/: .env.example  README.md  test-config-2.yaml  test.ipynb
experiments/conf/: config-assets.yaml  config.yaml
experiments/conf/assets/dataset/: arxiv-summarization-01.yaml  default.yaml
experiments/conf/assets/model/: default.yaml  ministral-3b-instruct.yaml  mistral-7b.yaml
experiments/conf/experiment/: train_adapter.yaml
experiments/conf/paths/: paths_config.yaml
experiments/scripts/: prefetch_data.py  prefetch_model.py  train_adapter.py  train_hydra.py
experiments/scripts/train_adapter/: config.py  data_module.py  lit_module.py  mlflow_utils.py  modeling.py  pipeline.py
infra/: README.md  SETUP-YANDEX-CLOUD.md  docker-compose.yaml
infra/compose/: .env.example  docker-compose.yaml
setup/: SETUP.md
